Fixing BaseBuilder logic